--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "nodemon": "^3.0.2",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
-    "stripe": "^16.1.0",
-    "three": "^0.160.0"
-
+    "stripe": "^16.6.0",
+    "three": "^0.160.0",
+    "uuid": "^10.0.0"
   }
 }
